# cbrXz

./: .gitignore  CHANGELOG.md  README.md  cbp.sh  cbrXz.py  go.mod  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  commitlint.yml  release.yml  semantic-pr.yml
cmd/cbrxz/: main.go
tests/: conftest.py  test_cli.py  test_extensions.py
tests/fixtures/: .gitattributes  testfile.cb7  testfile.cbr  testfile.cbz  testfile.epub
tests/integration/: test_copy_tree.py  test_dry_run.py  test_overwrite_flag.py  test_repack_zipstored.py  test_root_behavior.py  test_uppercase_and_junk_filtered.py
tests/src_files/: .gitattributes  ComicInfo.xml
tests/unit/: test_cli_args.py  test_filters.py  test_naming.py
